# ncpol2sdpa-cpp

./: AUTHORS  README  README.md  configure.ac  index.html  params.json
src/: Makefile.am  SdpRelaxation.cpp  SdpRelaxation.h  exampleNcPol.cpp  hamiltonian.cpp  ncUtils.cpp  ncUtils.h
test/: Makefile.am  benchmarkCase.cpp  exampleNcPol.cpp  hamiltonian.cpp
