lib_LTLIBRARIES = libncpol2sdpa-1.0.la
libncpol2sdpa_1_0_la_SOURCES = SdpRelaxation.cpp ncUtils.cpp
library_includedir=$(includedir)/ncpol2sdpa
library_include_HEADERS = SdpRelaxation.h ncUtils.h
bin_PROGRAMS = exampleNcPol hamiltonian
exampleNcPol_SOURCES = exampleNcPol.cpp
exampleNcPol_LDADD = libncpol2sdpa-1.0.la
hamiltonian_SOURCES = hamiltonian.cpp
hamiltonian_LDADD = libncpol2sdpa-1.0.la
